feat: added minigames!
